kubernetes/main/apps/observability/victoria-metrics/stack/ingress-single.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app vm-single
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: internal-nginx
  rules:
    - host: vm-single.${SECRET_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmsingle-stack
                port:
                  number: 8429
